--- a/gulp-maxgraph-master/src/scss/vendor.css
+++ b/gulp-maxgraph-master/src/scss/vendor.css
@@ -1,2 +1,2 @@
-@import url(c:\Users\probl\Desktop\Nikita-Kalinkin.github.io\gulp-maxgraph-master\src\scss\vendor\normalize.css);
+@import url(\vendor\normalize.css);
 /*# sourceMappingURL=vendor.css.map */
