--- a/gulp-maxgraph-master/src/partials/header.html
+++ b/gulp-maxgraph-master/src/partials/header.html
@@ -1,3 +1,9 @@
 <header class="header">
-  <div class="container"></div>
+  <div class="container">
+    <ul class="social" title="">
+      <li class="social__item"><a href="#" target="_blank" class="social__link social__link--fb" data-scroll="#" aria-label="Наша страничка в Фейсбуке"></a>1</li>
+      <li class="social__item"><a href="#" target="_blank" class="social__link social__link--vk" data-scroll="#" aria-label="Наша страничка во Вконтакте"></a>2</li>
+      <li class="social__item"><a href="#" target="_blank" class="social__link social__link--tw" data-scroll="#" aria-label="Наша страничка в Твиттере"></a>3</li>
+    </ul>
+  </div>
 </header>
