--- a/BrowLove/css/blocks/footer.less
+++ b/BrowLove/css/blocks/footer.less
@@ -59,13 +59,14 @@
   }
 
   &--main {
+    align-items: flex-start;
     button {
       padding-top: 20px;
       font-family: "Georgia";
       font-size: 18px;
       font-weight: normal;
       font-style: normal;
-      width: 94px;
+      
     }
 
     h3 {
