--- a/BrowLove/css/blocks/main.less
+++ b/BrowLove/css/blocks/main.less
@@ -2,12 +2,8 @@
 @import "../vars.less";
 
 .main {
-
     background: url("../img/main/fon.png") center;
-
-
     background-color: #D7AD91;
-
     height: 784px;
     padding-top: 16px;
     margin: 0 auto;
@@ -110,10 +106,8 @@
     }
 
     @media @mw5 {
-
         width: 203px;
         height: 275px;
-
 
     }
 
@@ -121,15 +115,14 @@
 
         width: 153px;
         height: 185px;
-
-
     }
 }
 
 .brow__right {
 
-
+    margin-left: 115px;
     @media @mw2 {
+        margin-left: 0;
         order: 1;
         width: 100%;
     }
