--- a/BrowLove/css/blocks/course.css
+++ b/BrowLove/css/blocks/course.css
@@ -27,18 +27,28 @@
 }
 .course__block {
   min-height: 392px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
 }
 @media (max-width: 1166px) {
   .course__block {
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     min-height: 591px;
   }
 }
 .content_course__block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 @media (max-width: 850px) {
@@ -53,10 +63,10 @@
   width: 98px;
   height: 147px;
 }
-@media (max-width: 430px) {
+@media (max-width: 360px) {
   .course_left {
-    width: 98px;
-    height: 98px;
+    min-width: 98px;
+    min-height: 98px;
   }
 }
 .course_left img {
