--- a/BrowLove/css/blocks/course.less
+++ b/BrowLove/css/blocks/course.less
@@ -59,9 +59,9 @@
     width: 98px;
     height: 147px;
 
-    @media @mw7 {
-        width: 98px;
-        height: 98px;
+    @media @mw8 {
+        min-width: 98px;
+        min-height: 98px;
 
 
     }
