--- a/ActiveBox/css/style.css
+++ b/ActiveBox/css/style.css
@@ -1,45 +1,44 @@
 body {
-     margin: 0; /* Отступы*/
+    margin: 0;
 
-     font-family: 'Raleway', sans-serif; /*Тип Шрифта*/
-     font-size: 14px; /*Размер Шрифта*/
-     color: #6c7279; /*Цвет Шрифта*/
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    color: #6c7279;
+    -webkit-font-smoothing: antialiased;
 
-     background-color:  white;
-     -webkit-font-smoothing: antialiased;
+    background-color: #fff;
 }
 
 *,
-*,:before
-*,:after {
-     box-sizing: border-box; /*Границы*/
+*:before,
+*:after {
+    box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,h6 {
-   margin: 0;
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
 }
 
 p {
-	margin: 0 0 10px ;
+    margin: 0 0 10px;
 }
 
 
 /* Container
 ===================*/
 .container {
-    /*width: 100%;  ======Ширина сайта===========*/
-    max-width: 1200px; /*======Мах Ширина сайта===========*/
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 0 30px;
-    
-    
+    padding: 0 15px;
 }
 
-/*======header шапка сайта
-===========*/
+
+/* Header
+===================*/
 
 .header {
-	width: 100%;
+    width: 100%;
     height: 100px;
 
     position: absolute;
@@ -49,290 +48,304 @@ p {
 }
 
 .header.fixed {
-	height: auto;
-	
-	position: fixed;
-	background-color: #31344e; 
+    height: auto;
 
+    position: fixed;
+
+    background-color: #31344e;
 }
+
 .header.fixed .header__inner {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	border-bottom: 0;
-}
-.header__inner {
-	display: flex;
-	justify-content: space-between;
-    padding: 35px 0; /* Отступы*/
-	border-bottom: 1px solid #515369;
-	align-items: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+
+    border-bottom: 0;
 }
 
-/*======NAV
-===========*/
+.header__inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 35px 0;
+
+    border-bottom: 1px solid #515369;
+}
+
+
+/* Nav
+===================*/
+
 .nav {
-	display: flex;
-	font-size: 13px;
+    display: flex;
+    font-size: 13px;
     font-weight: 700;
     text-transform: uppercase;
-
 }
 
 .nav__link {
-	margin-left: 50px;
+    margin-left: 50px;
 
-	color: white;
-	text-decoration: none;
-	opacity: 0.75;
+    color: #fff;
+    text-decoration: none;
+    opacity: .75;
 
-	transition: opacity 0.1s linear;
-}
-
-.nav__link:hover {
-	opacity: 1;
-	
+    transition: opacity .1s linear;
 }
 
 .nav__link:first-child {
-	margin-left: 0;
+    margin-left: 0;
 }
+
+.nav__link:hover {
+    opacity: 1;
+}
+
+
+/* Intro
+===================*/
 
 .intro {
-	display: flex;
-	flex-direction: column;
-	justify-content: center; 
-	height: 750px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 750px;
     padding-top: 100px;
-    text-transform: uppercase;
-	text-align: center;
 
-	background: #31344e url(../img/intro-bg.jpg); 
-	background-repeat: no-repeat;
-    background-position: center top;
+    background: #31344e url("img/intro-bg.jpg") center no-repeat;
     background-size: cover;
-    
-
 }
+
 .intro__inner {
-	width: 100%;
-	max-width: 970px;
-	margin: 0 auto;
+    width: 100%;
+    max-width: 970px;
+    margin: 0 auto;
+
     text-align: center;
 }
-.intro__title {
-	margin: 0 0 30px;
 
-	font-family: 'Open sans', sans-serif;
-	color: white;
-	font-size: 65px;
-	line-height: 1.1;
-	color: #fff;
-	font-weight: 700;
-	text-transform: uppercase;
-	text-align: center;
+.intro__title {
+    margin: 0 0 30px;
+
+    font-family: 'Open Sans', sans-serif;
+    font-size: 65px;
+    line-height: 1.1;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
 .intro__subtitle {
-
     margin-bottom: 60px;
-	font-size: 16px;
-	color: white;
-	line-height: 1.5;
-	font-weight: 400;
-	text-transform: uppercase;
-	text-align: center;
+
+    font-size: 22px;
+    color: #fff;
+    line-height: 1.5;
+    font-weight: 400;
 }
 
-/*======Button
-===========*/
-.btn {
-	display: inline-block;
-	vertical-align: top;
-	padding: 14px 60px;
-    color: white;
 
-	border-radius: 3px;
-	border: 0;
-	cursor: pointer;
+/* Button
+===================*/
+.btn {
+    display: inline-block;
+    vertical-align: top;
+    padding: 14px 40px;
+
+    border-radius: 2px;
+    border: 0;
+    cursor: pointer;
+
     font-family: 'Raleway', sans-serif;
-	font-size: 14px;
-	font-weight: 600;
-	text-transform: uppercase;
-	text-decoration: none;
-	text-align: center;
-	transition: background 0.1s linear;
-	
+    font-size: 13px;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+    text-align: center;
+
+    transition: background .1s linear;
 }
 
 .btn--red {
- background-color: #e84545;
-  
+    background-color: #e84545;
 }
 
-.btn--red:hover{
-	background-color: #dd3434;
+.btn--red:hover {
+    background-color: #dd3434;
 }
 
 .btn--long {
-    min-width: 160px;
+    min-width: 280px;
 }
 
-/*------features-----*/
 
-.features{
-	display: flex;
-	flex-wrap: wrap;
-	margin: 95px 0;
-	justify-content: center;
+
+/* Features
+===================*/
+.features {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 95px 0;
 }
 
-.features__item{
-	width: 24%;
+.features__item {
+    width: 33.33333%;
     padding: 0 40px;
     margin: 25px 0;
-	text-align: center;
-	
+
+    text-align: center;
 }
 
-.features__icon{
-	margin-bottom: 25px; 
+.features__icon {
+    margin-bottom: 25px;
 }
 
-.features__title{
-	margin-bottom: 20px;
+.features__title {
+    margin-bottom: 20px;
 
-	font-size: 14px;
-	color: #2d3033 
-	font-weight: 700;
-	text-transform: uppercase;
+    font-size: 14px;
+    color: #2d3033;
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
-.features__text{
- font-size: 14px;
- line-height: 1.5;
- color: #6c7279;
+.features__text {
+    font-size: 14px;
+    line-height: 1.5;
+    color: #6c7279;
 }
 
-/*Works*/
 
+/* Works
+===================*/
 .works {
     display: flex;
     flex-wrap: wrap;
-     
 }
 
 .works__item {
     width: 25%;
     height: 350px;
+
+    border-bottom: 1px solid #fff;
+    border-right: 1px solid #fff;
+
     position: relative;
     overflow: hidden;
-
 }
 
-.works__item:hover .works__content  {
-	opacity: 1;
-
+.works__item:hover .works__content {
+    opacity: 1;
 }
+
 .works__photo {
-	min-width: 100%;
- position: absolute;
- top: 50%;
- left: 50%;
- z-index: 1;
- transform: translate3d(-50%, -50%, 0);
+    min-width: 100%;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+
+    transform: translate3d(-50%, -50%, 0);
 }
 
 .works__content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
 
-  background-color: rgba(232, 69, 69, .9);
-  opacity: 0;
-  text-align: center;
+    background-color: rgba(232, 69, 69, .9);
+    opacity: 0;
 
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  transform: opacity 0.2s linear;
-} 
+    text-align: center;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+
+    transition: opacity .2s linear;
+}
 
 .works__title {
-	margin-bottom: 5px;
-	font-size: 14px;
-	font-weight: 700;
-	color: #777;
-	text-transform: uppercase;
+    margin-bottom: 5px;
+
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
 }
 
 .works__text {
-	font-size: 14px;
-	color: #777
-
+    font-size: 14px;
+    color: #fff;
 }
 
-/*-----Works-----*/
-
-/*----- Team -----*/
 
 
+
+/* Team
+===================*/
 .team {
-	margin: 100px 0 70px;
-
+    margin: 100px 0 70px;
 }
-.team__inner {
-	display: flex;
-	
-	margin: 0 -15px;
 
+.team__inner {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
 }
 
 .team__item {
     width: 25%;
-   padding: 0 15px;
+    padding: 0 15px;
     margin-bottom: 30px;
 }
+
 .team__photo {
-	display: block;
-	max-width: 100%;
-	height: auto;
-	margin-bottom: 20px;
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
 }
 
 .team__name {
-	margin-bottom: 8px;
+    margin-bottom: 8px;
+
     font-size: 22px;
     color: #2d3033;
 }
 
 .team__prof {
-	 margin-bottom: 15px;
+    margin-bottom: 15px;
+
     font-size: 13px;
     color: #e84545;
-     text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 .team__text {
-	 margin-bottom: 20px;
+    margin-bottom: 20px;
 
-    
-    line-height: 1.5;
     font-size: 14px;
+    line-height: 1.5;
     color: #6c7279;
 }
 
+
+
 /* Social
 ===================*/
+
 .social {
     display: flex;
 }
 
 .social--footer {
     justify-content: center;
-} 
+}
 
 .social__item {
     display: flex;
@@ -376,34 +389,42 @@ p {
     transition: fill .1s linear;
 }
 
-/* main
+.social--footer .social__icon {
+    fill: #fff;
+}
+
+
+
+/* Reviews
 ===================*/
 
-.main {
+.reviews {
     overflow: hidden;
     background-color: #53354a;
 }
 
-.main__item {
-    display: flex;  
-    outline: hidden;
+.reviews__slider {
+    height: 500px;
+    overflow: hidden;
 }
 
-.main__Slider {
-	height: 500px;
-	overflow: hidden;
-}
-.main__Slider.slick-initialized {
-	height: auto;
+.reviews__slider.slick-initialized {
+    height: auto;
 }
 
-.main__photo {
+.reviews__item {
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.reviews__photo {
     width: 50%;
     height: 500px;
     position: relative;
 }
 
-.main__img {
+.reviews__img {
     position: absolute;
     top: 50%;
     right: 0;
@@ -412,7 +433,7 @@ p {
     transform: translateY(-50%);
 }
 
-.main__content {
+.reviews__content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -420,7 +441,7 @@ p {
     padding-left: 80px;
 }
 
-.main__text {
+.reviews__text {
     margin-bottom: 25px;
 
     font-family: 'Cardo', sans-serif;
@@ -430,7 +451,7 @@ p {
     color: #fff;
 }
 
-.main__author {
+.reviews__author {
     font-size: 13px;
     font-weight: 700;
     text-transform: uppercase;
@@ -438,45 +459,44 @@ p {
 }
 
 .slick-dots {
-	display: flex;
-	justify-content: center;
-	
-	padding: 0 0 10px;
-	list-style: none;
-	width: 50%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0 0 10px;
+    list-style: none;
+    width: 50%;
 
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	z-index: 2;
-	
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 2;
 }
 
 .slick-dots li {
-	margin: 0 10px;
+    margin: 0 5px;
 }
 
 .slick-dots button {
-	width: 15px;
-	height: 15px;
-	padding: 0;
+    width: 15px;
+    height: 15px;
+    padding: 0;
 
-	background: #fff;
-	border-radius: 50%;
-	border: 0;
-	opacity: 0.5;
-	cursor: pointer;
+    background: #fff;
+    border-radius: 50%;
+    border: 0;
+    opacity: .5;
+    cursor: pointer;
 
-	font-size: 0;
-	color: transparent;
+    font-size: 0;
+    color: transparent;
+}
 
+.slick-dots button:focus {
+    outline: 0;
 }
 
 .slick-dots .slick-active button {
-	opacity: 1;
-}
-	.slick-dots: focus {
-		outline: 0;
+    opacity: 1;
 }
 
 /* Download
@@ -505,6 +525,8 @@ p {
     text-transform: uppercase;
 }
 
+
+
 /* Footer
 ===================*/
 
@@ -514,7 +536,7 @@ p {
 
 .footer__inner {
     display: flex;
-    
+    flex-wrap: wrap;
     padding: 70px 0;
 }
 
@@ -569,6 +591,7 @@ p {
     color: #fff;
 }
 
+
 /* Burger */
 .burger {
     display: none;
@@ -614,80 +637,88 @@ p {
     bottom: -8px;
 }
 
+
+
 /* Media
 ===================*/
+
 @media (max-width: 1300px) {
-     .works__item {
+    /* Works */
+    .works__item {
         width: 50%;
-     }
     }
+}
 
 @media (max-width: 991px) {
 
-	/* Nav */
+    /* Nav */
     .nav {
         display: none;
         width: 100%;
         flex-direction: column;
-        text-align: right;
+
         background-color: #31344e;
+        text-align: right;
 
         position: absolute;
         top: 100%;
         right: 0;
     }
 
-   .nav.show {
-   	display: flex;
-
-   }
+    .nav.show {
+        display: flex;
+    }
 
     .nav__link {
-	    padding: 9px 15px;
+        padding: 9px 15px;
     }
+
     /* Burger */
     .burger {
         display: block;
     }
-	  /* Intro */
+
+    /* Intro */
     .intro__title {
         font-size: 40px;
     }
-     /* Team */
-     .team__photo {
-      margin-left: auto;
-     margin-right: auto;
-     }
 
-   .team__inner {
-    justify-content: center;
-    flex-wrap: wrap;
+    /* Features */
+    .features__item {
+        width: 50%;
     }
 
-   .team__item {
-    width: 45%;
-    text-align: center;
-   }
-   .social {
-    justify-content: center;
-    flex-wrap: wrap;
+    /* Team */
+    .team__item {
+        width: 50%;
+
+        text-align: center;
     }
-   /* main */
-   .main__item {
-   	flex-wrap: wrap;
-   }
-   .main__photo {
-     width: 100%;
-     margin: 15px 0 40px;
-     overflow: hidden;
-   }
-   .main__content {
+
+    .team__photo {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    /* Team */
+    .social {
+        justify-content: center;
+    }
+
+    /* Reviews */
+    .reviews__photo {
+        width: 100%;
+        margin: 15px 0 40px;
+        overflow: hidden;
+    }
+
+    .reviews__content {
         width: 100%;
         padding-left: 0;
         padding-bottom: 40px;
     }
-
 }
+
 
 @media (max-width: 767px) {
 
@@ -707,70 +738,80 @@ p {
 
         font-size: 16px;
     }
-     /*features*/
+
+    /* Features */
     .features {
-    	margin: 40px 0;
+        margin: 40px 0;
     }
+
     .features__item {
-        width: 75%;
+        width: 100%;
         padding-left: 0;
         padding-right: 0;
-       }
-       /*Works*/
-     .works__item {
+    }
+
+    /* Works */
+    .works__item {
         width: 100%;
-        height: 300px;	
-     }
+        height: 300px;
+    }
 
+    /* Team */
     .team {
-	margin: 60px 0 30px;
+        margin: 60px 0 30px;
     }
 
-     .team__item {
-    width: 75%;
+    .team__item {
+        width: 100%;
     }
 
- /* main */
-    .main__text {
+    /* Reviews */
+    .reviews__text {
         font-size: 25px;
     }
 
-    .download {
-    margin: 50px 0;
-   }
-
-   .download__title {
-    font-size: 24px;
+    /* Btn */
+    .btn--long {
+        min-width: 260px;
     }
-/* Footer
-===================*/
 
-.footer {
- 
+    /* Download */
+    .download {
+        margin: 50px 0;
+    }
+
+    .download__title {
+        font-size: 24px;
+    }
+
+    /* Footer */
+    .footer__inner {
+        padding: 30px 0;
+    }
+
+    .footer__block {
+        width: 100%;
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 30px;
+    }
+
+    .footer__block:last-child {
+        margin-bottom: 0;
+    }
 }
 
-.footer__inner {
-    flex-wrap: wrap;   
-    padding: 30px 0;
-}
-
-.footer__block {
-    width: 100%;
-
-    margin-bottom: 30px;
-}
-
-.footer__block:last-child {
-	margin-bottom: 0;
-
-}
-
-}
 
 @media (max-width: 414px) {
 
-    /* main */
-    .main__img {
+    /* Reviews */
+    .reviews__img {
         right: -100px;
     }
 }
+
+
+
+
+
+
