--- a/ActiveBox/css/style.css
+++ b/ActiveBox/css/style.css
@@ -229,7 +229,7 @@ p {
 
     border-bottom: 1px solid #fff;
     border-right: 1px solid #fff;
-
+    cursor: pointer;
     position: relative;
     overflow: hidden;
 }
